# symbolic_playground

./: CMakeLists.txt  main.cpp  sym_aut.h  sym_aut_algos.cpp  sym_aut_algos.h
dfa_sub/: CMakeLists.txt  definitions.h  main.cpp  nfa_helper.cpp  nfa_helper.h  nfa_translate.cpp  nfa_translate.h  test.sh  utils.h
dfa_sub/description/: main.tex
dfa_sub/tests/: test_trans.cpp
examples/: ex1.hoa  ex2.hoa  ex3.hoa  ex_game_1.hoa  ex_game_2.hoa
